# sand-castle

./: .gitignore  Cargo.toml  README.md
crates/leptos-sand-castle/: Cargo.toml
crates/leptos-sand-castle/src/components/: canvas.rs  cuboid.rs  mesh.rs  mod.rs
crates/leptos-sand-castle/src/hooks/: mod.rs  use_frame.rs
crates/sand-castle/: Cargo.toml
crates/sand-castle-core/: Cargo.toml
crates/sand-castle-core/src/: lib.rs  renderer.rs  resource.rs  scene.rs
crates/sand-castle-core/src/resource/: camera.rs  geometry.rs  lighting.rs  loader.rs  object_3d.rs  texture.rs
crates/sand-castle-core/src/resource/camera/: orthographic.rs  perspective.rs
crates/sand-castle-core/src/resource/geometry/: cuboid.rs
crates/sand-castle-core/src/resource/lighting/: light.rs  material.rs
crates/sand-castle-core/src/resource/lighting/light/: ambient_light.rs  directional_light.rs  point_light.rs  spot_light.rs
crates/sand-castle-core/src/resource/lighting/material/: basic.rs  pbr.rs  phong.rs  shader.rs
crates/sand-castle-core/src/resource/lighting/material/shaders/: basic.wgsl
crates/sand-castle-core/src/resource/lighting/material/shaders/basic/: fs_basic.wgsl  fs_basic_tex.wgsl  vs_basic.wgsl
crates/sand-castle-core/src/resource/lighting/material/shaders/pbr/: fs_pbr.wgsl  fs_pbr_tex.wgsl  vs_pbr.wgsl
crates/sand-castle-core/src/resource/lighting/material/shaders/phong/: fs_phong.wgsl  fs_phong_tex.wgsl  vs_phong.wgsl
crates/sand-castle-core/src/resource/loader/: geometry.rs  gltf.rs  material.rs  textures.rs
crates/sand-castle-core/src/resource/object_3d/: mesh.rs
crates/sand-castle-core/src/resource/object_3d/mesh/: instanced.rs
crates/sand-castle-core/src/shaders/: vertex.wgsl
crates/sand-castle-leptos/: Cargo.toml
crates/sand-castle-leptos/src/: canvas.rs  lib.rs  resource.rs  scene.rs
crates/sand-castle-leptos/src/resource/: camera.rs  geometry.rs  lighting.rs  loader.rs  mesh.rs
crates/sand-castle-leptos/src/resource/camera/: orthographic.rs  perspective.rs
crates/sand-castle-leptos/src/resource/geometry/: cuboid.rs
crates/sand-castle-leptos/src/resource/lighting/: material.rs
crates/sand-castle-leptos/src/resource/lighting/light/: ambient_light.rs  directional_light.rs  point_light.rs  spot_light.rs
crates/sand-castle-leptos/src/resource/lighting/material/: basic.rs  pbr.rs  phong.rs
crates/sand-castle-leptos/src/resource/loader/: gltf.rs  textures.rs
crates/sand-castle/src/: lib.rs  renderer.rs  scene.rs  units.rs
crates/sand-castle/src/camera/: mod.rs  orthographic.rs  perspective.rs
crates/sand-castle/src/geometry/: cube.rs  cuboid.rs  mod.rs  torus.rs
crates/sand-castle/src/geometry/shaders/: cuboid.wgsl
crates/sand-castle/src/lighting/: ambient.rs  mod.rs
crates/sand-castle/src/material/: mesh_basic.rs  mod.rs  shader.rs
crates/sand-castle/src/material/shaders/: mesh_basic.wgsl
crates/sand-castle/src/materials/: mesh_basic.rs
crates/sand-castle/src/object/: mesh.rs
crates/sand-castle/src/object/shaders/: mesh.wgsl
examples/cube/: Cargo.toml  dist.7z  index.html
examples/cube-leptos/: Cargo.toml  index.html
examples/cube-leptos/src/: main.rs
examples/cube/src/: lib.rs  main.rs
examples/leptos-cube/: Cargo.toml  index.html
examples/leptos-cube/src/: main.rs
examples/leptos-gltf-viewer/: Cargo.toml
examples/leptos-gltf-viewer/src/: main.rs
