[package]
name = "sand-castle-core"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
bytemuck = { version = "1.16.3", features = ["bytemuck_derive", "derive"] }
derive-getters = "0.4.0"
derive_builder = "0.20.0"
derive_more = "0.99.18"
glam = { version = "0.28.0", features = ["bytemuck"] }
indexmap = "2.2.6"
uuid = { version = "1.10.0", features = ["v4"] }
web-sys = { version = "0.3.69", features = ["HtmlCanvasElement"] }
wgpu = { version = "22.0.0", features = ["webgl", "webgpu"] }
