[package]
name = "sand-castle-core"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
bytemuck = { version = "1.17", features = ["bytemuck_derive", "derive"] }
derive_builder = "0.20"
derive_more = { version = "1.0", features = ["deref", "from"] }
getset = "0.1"
glam = { version = "0.28.0", features = ["bytemuck"] }
indexmap = "2.2.6"
uuid = { version = "1.10", features = ["v4"] }
web-sys = { version = "0.3.70", features = ["HtmlCanvasElement"] }
wgpu = { version = "22.0", features = ["webgl", "webgpu"] }
