[package]
name = "sand-castle"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
derive-getters = "0.3.0"
derive_builder = "0.20.0"
enum_dispatch = "0.3.13"
wasm-bindgen = "0.2.92"
web-sys = "0.3.69"
wgpu = { version = "0.20.0", features = ["webgl"] }
