[package]
name = "cube-leptos"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.6", features = ["csr"] }
leptos-sand-castle = { path = "../../crates/leptos-sand-castle" }
