[package]
name = "cube"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
sand-castle = { path = "../../crates/sand-castle" }
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = [
  "Window",
  "Document",
  "HtmlElement",
] }
winit = { version = "0.30.0", features = ["rwh_05"] }
